; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/ole32/extr_marshal.c_round_global_size.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/ole32/extr_marshal.c_round_global_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@round_global_size.global_size_alignment = internal global i32 -1, align 4
@GMEM_FIXED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @round_global_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @round_global_size(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @round_global_size.global_size_alignment, align 4
  %5 = icmp eq i32 %4, -1
  br i1 %5, label %6, label %13

6:                                                ; preds = %1
  %7 = load i32, i32* @GMEM_FIXED, align 4
  %8 = call i8* @GlobalAlloc(i32 %7, i32 1)
  store i8* %8, i8** %3, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = call i32 @GlobalSize(i8* %9)
  store i32 %10, i32* @round_global_size.global_size_alignment, align 4
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @GlobalFree(i8* %11)
  br label %13

13:                                               ; preds = %6, %1
  %14 = load i32, i32* %2, align 4
  %15 = load i32, i32* @round_global_size.global_size_alignment, align 4
  %16 = add nsw i32 %14, %15
  %17 = sub nsw i32 %16, 1
  %18 = load i32, i32* @round_global_size.global_size_alignment, align 4
  %19 = sub nsw i32 %18, 1
  %20 = xor i32 %19, -1
  %21 = and i32 %17, %20
  ret i32 %21
}

declare dso_local i8* @GlobalAlloc(i32, i32) #1

declare dso_local i32 @GlobalSize(i8*) #1

declare dso_local i32 @GlobalFree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
